--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -1,10 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title th:text="${question.title}"></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
+    <link rel="stylesheet" href="/css/editormd.preview.min.css">
+
+    <script src="/js/jquery-3.6.0.slim.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
+    <script src="/js/editormd.min.js"></script>
+    <script src="/js/lib/marked.min.js"></script>
+    <script src="/js/lib/prettify.min.js"></script>
+    <script type="text/javascript">
+        $(function() {
+            var testView = editormd.markdownToHTML("question-view", {
+            });
+        });
+    </script>
 </head>
 <body>
-$END$
+<div th:insert="navigation :: nav"></div>
+<div class="container-fluid main">
+    <div class="row ">
+<!--        左边主要内容-->
+        <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+            <!--正文-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3 class="question-title"><span th:text="${question.title}"></span></h3>
+                <span class="text-desc">
+                作者：<span th:text="${question.user.name}"></span> |
+                发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> |
+                阅读数<span th:text="${question.viewCount}"></span></span>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+<!--                描述-->
+                <div id="question-view" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <!-- Server-side output Markdown text -->
+                    <textarea style="display:none;" th:text="${question.description}"></textarea>
+                </div>
+<!--                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="display:none;"th:text="${question.description}"></div>-->
+                <!--                标签-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="label label-info question-tag" th:each="tag:${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info " th:text="${tag}"></span>
+                    </span>
+
+                </div>
+<!--                编辑-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{'/publish/'+${question.id}}"
+                       class="community-menu col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                       th:if="${session.user != null && session.user.id == question.creator}"><span
+                            class="glyphicon glyphicon-pencil"
+                            aria-hidden="true">编辑</span></a>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+
+            </div>
+            <!--回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    <span th:text="${question.commentCount}"></span>个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment:${comments}">
+                    <div class="media media-width_adjust">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded"
+                                     th:src="${comment.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body media-height-adjust">
+                            <h6 class="media-heading">
+                                <a th:text="${comment.user.name}"></a>
+                            </h6>
+                            <div th:text="${comment.content}"></div>
+                            <div class="menu">
+                                <span class="glyphicon glyphicon-thumbs-up menu-icon"></span>
+                                <span th:data-id="${comment.id}"
+                                      onclick="collapseComments(this)" class="menu-comment-icon">
+                                    <span class="glyphicon glyphicon-comment"></span>
+                                    <span th:text="${comment.commentCount}"></span>
+                                </span>
+
+                                <span class="pull-right"
+                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                            </div>
+                            <!--                            二级评论-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                                 th:id="${'comment-'+comment.id}">
+
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <input type="text" class="form-control" placeholder="评论一下..."
+                                           th:id="${'input-'+comment.id}">
+                                    <button type="button" class="btn btn-success pull-right sub-comments-btn"
+                                            onclick="comment(this)" th:data-id="${comment.id}">评论
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--回复输入框-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    提交回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                    <div class="media media-width_adjust ">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded"
+                                     th:src="${session.user != null?session.user.avatarUrl:'/images/defaultUser.png'}">
+                            </a>
+                        </div>
+                        <div class="media-body media-height-adjust">
+                            <h6 class="media-heading">
+                                <a th:text="${session.user != null?session.user.name:'默认用户'}"></a>
+                            </h6>
+                        </div>
+                    </div>
+                    <input type="hidden" id="question_id" th:value="${question.id}">
+                    <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                    <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
+                </div>
+            </div>
+        </div>
+
+<!--        右边主要内容-->
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>发起人</h4>
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h6 class="media-heading">
+                            <a th:text="${question.user.name}"></a>
+                        </h6>
+                    </div>
+                </div>
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+<!--            hello图片-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>Hello</h4>
+                <img class="img-thumbnail hello" src="/images/hello.png">
+            </div>
+            <!--        相关问题-->
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
